# 2024-crescendo

./: .gitignore  Makefile  README.md  botpose.vpr  constants.py  limelight_config.vpr  physics.py  pixy_note.prm  pyproject.toml  rikitik.fmap  robot.py  simgui-window.json  simgui.json  test.sh
.pathplanner/: settings.json
Robot_Rikitik2024/: config.json
arduino_code/i2c_rgb/: i2c_rgb.ino
autonomous/: auto_modes.py  base_auto.py
common/: arduino_light.py  field.py  gamepad_helper.py  limelight.py  path_helper.py  pixy.py  tools.py
components/: __init__.py  automations.py  chassis.py  climber.py  field.py  intake.py  intake_control.py  limelight.py  lobra.py  pathplanner.py  pixy.py  robot_actions.py  shooter.py  shooter_control.py  swervedrive.py  swervemodule.py
deploy/pathplanner/autos/: 1 amp + 2 speakers.auto  1 amp + 3_speakers.auto  1_amp + 2_middle line.auto  1_amp + 2_speakers.auto  1_amp.auto  2 amp m1 + grab m2.auto  2 loin 2 furious.auto  2 loin.auto  2_speakers.auto  4 speakers fast.auto  4_speakers.auto  4_speakers_fast.auto  DO_NOTHING.auto  New Auto.auto  Taxi.auto  auto_test.auto  test_auto.auto
deploy/pathplanner/paths/: 1_shoot_to_m1.path  Amp_to_M2.path  DoTaxi.path  M1_to_amp.path  New New Path.path  New Path.path  Speaker_to_1.path  amp to middle line 1.path  (+25 more)
subsystems/: drivetrain.py  swervedrive.py  swervemodule.py
sysid/flywheel/: pyproject.toml  robot.py
sysid/rev_absolute/: constants.py  sysidroutinebot.py
sysid/shooter/: constants.py  robot.py  sysidroutinebot.py
test_code/: pyproject.toml  robot.py
tests/: .gitignore
(+7 files in other folders)
